--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <title>Project1</title>
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="D:\Web Z tech\hikingbarella-Web\aa.png" alt="LOGO" />
+      <img src="img/logo.png" alt="LOGO" />
       <b>NYUS</b>
     </div>
     <nav>
@@ -33,6 +33,6 @@
       </ul>
     </nav>
   </header>
-  <script src="pro.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
