--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav>
       <button class="toggle-btn" id="toggle-btn">&#9776;</button>
       <ul id="nav-links">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li class="dropdown">
           <a href="#">Menu &#9662;</a>
           <ul class="dropdown-content">
@@ -25,14 +25,36 @@
             <li><a href="#">Dark</a></li>
           </ul>
         </li>
-        <li><a href="">Testimonial</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="testimonial.html">Testimonial</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li>
         </li>
-        <button class="btn1"><a href="#"><b>Reservation</b></a></button>
+        <button class="btn1"><a href=""><b>Reservation</b></a></button>
       </ul>
     </nav>
   </header>
+  <main class="content">
+    <section>
+      <h1 class="center">Welcome to NYUS</h1>
+      <p>
+        This is the homepage of NYUS. Here, you can find the best dining
+        experience with a focus on quality, service, and innovation.
+      </p>
+      <p>
+        Explore our menu, learn more about us, read testimonials from our
+        satisfied customers, and contact us for reservations.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+        quibusdam at provident? Modi enim nemo explicabo quos molestias
+        voluptates voluptatibus, perferendis asperiores odio rem fugiat
+        distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
+        amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
+        voluptates alias corporis, amet architecto accusamus laudantium, nulla
+        pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
+      </p>
+    </section>
+  </main>
   <script src="js/app.js"></script>
 </body>
 </html>
