--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <style>
       body {
-          background-image: url('img/background1.jpg');
+          background-image: url('img/background3.jpg');
           background-size: cover; 
           background-repeat: no-repeat; 
           background-position: center; 
@@ -46,21 +46,17 @@
     <main class="content">
       <section>
         <h1 class="center">About Us</h1>
-        <div class="para">
-        <p>
-          Welcome to NYUS. We are committed to providing the best dining
-          experience with a focus on quality, service, and innovation.
-        </p>
-        <p>
-          Our journey began with a simple idea: to create a place where people
-          could enjoy delicious food in a warm and welcoming environment.
-        </p>
-        <p>
-          We hope you enjoy your time with us and look forward to serving you.
-        </p>
-      </div>
+        <p class="para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+          quibusdam at provident? Modi enim nemo explicabo quos molestias
+          voluptates voluptatibus, perferendis asperiores odio rem fugiat
+          distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
+          amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
+          voluptates alias corporis, amet architecto accusamus laudantium, nulla
+          pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
+      </p>
       </section>
     </main>
-    <script src="pro.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
