--- a/index.html
+++ b/index.html
@@ -29,41 +29,31 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li class="dropdown">
-                    <a href="#">Menu &#9662;</a>
+                    <a href="#" class="nav-link">Menu &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a href="#">Light</a></li>
-                        <li><a href="#">Dark</a></li>
+                        <li><a href="#" >Dark</a></li>
                     </ul>
                 </li>
                 <li><a href="testimonial.html">Testimonial</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html" >Contact</a></li>
                 <li></li>
-                <button class="btn1"><a href=""><b>Reservation</b></a></button>
+                <button class="btn1"><a href="#"><b>Reservation</b></a></button>
             </ul>
         </nav>
     </header>
     <main class="content">
         <section>
             <h1 class="center">Welcome to NYUS</h1>
-            <div class="para">
-            <p>
-                This is the homepage of NYUS. Here, you can find the best dining
-                experience with a focus on quality, service, and innovation.
-            </p>
-            <p>
-                Explore our menu, learn more about us, read testimonials from our
-                satisfied customers, and contact us for reservations.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                quibusdam at provident? Modi enim nemo explicabo quos molestias
-                voluptates voluptatibus, perferendis asperiores odio rem fugiat
-                distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
-                amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
-                voluptates alias corporis, amet architecto accusamus laudantium, nulla
-                pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
-            </p>
-          </div>
+                <p class="para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+                    quibusdam at provident? Modi enim nemo explicabo quos molestias
+                    voluptates voluptatibus, perferendis asperiores odio rem fugiat
+                    distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
+                    amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
+                    voluptates alias corporis, amet architecto accusamus laudantium, nulla
+                    pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
+                </p>
         </section>
     </main>
     <script src="js/app.js"></script>
