--- a/About.html
+++ b/About.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/About.css" />
     <style>
-      body {
-          background-image: url('img/background3.jpg');
+      .hero {
+          background-image: url('img/background2.jpg');
           background-size: cover; 
           background-repeat: no-repeat; 
           background-position: center; 
-          height: 100vh; 
-          margin: 0; 
+          height: 55vh;  
       }
   </style>
     <title>About Us</title>
   </head>
   <body>
+    <section class="hero">
     <header>
       <div class="logo">
         <img src="img/logo.png" alt="LOGO" />
@@ -46,17 +47,47 @@
     <main class="content">
       <section>
         <h1 class="center">About Us</h1>
-        <p class="para">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-          quibusdam at provident? Modi enim nemo explicabo quos molestias
-          voluptates voluptatibus, perferendis asperiores odio rem fugiat
-          distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
-          voluptates alias corporis, amet architecto accusamus laudantium, nulla
-          pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
-      </p>
+        <div class="para">
+          <p>Massa praesent sit suspendisse ac volutpat amet. <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;Commodo elit at non neque ullamcorper id.</p>
+    </div>
       </section>
     </main>
+  </section>
+  <section>
+    <div id="aa">
+      <h2>Our History</h2>
+      <p>Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut euismod. 
+        Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla facilisi. Dignissim volutpat 
+        velit ut dignissim aliquet nisl, pretium, viverra bibendum.<br><br>
+        Consequat facilisi ultricies integer eu nibh pellentesque. 
+        Morbi ac sit ultrices quis dignissim lectus. Pellentesque nisl, ac,
+        bibendum arcu vestibulum aliquam.</p>
+    </div>
+    <div id="ab">
+      <div class="item">
+        <img src="img/icon1.png" alt="Icon1">
+        <div class="text">
+          <h4>Hand-crafted Decor</h4>
+          <p>In total 650m² mix of styles and colors.</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="img/icon1.png" alt="Icon1">
+        <div class="text">
+          <h4>Hand-crafted Decor</h4>
+          <p>In total 650m² mix of styles and colors.</p>
+        </div>
+      </div>
+      <div class="item">
+        <img src="img/icon1.png" alt="Icon1">
+        <div class="text">
+          <h4>Hand-crafted Decor</h4>
+          <p>In total 650m² mix of styles and colors.</p>
+        </div>
+      </div>
+    </div>
+  </section>
     <script src="js/app.js"></script>
   </body>
 </html>
