--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
-        body {
+        .hero {
             background-image: url('img/background1.jpg');
             background-size: cover; 
             background-repeat: no-repeat; 
@@ -18,6 +18,7 @@
     <title>Project1</title>
 </head>
 <body>
+    <section class="hero">
     <header>
         <div class="logo">
             <img src="img/logo.png" alt="LOGO" />
@@ -45,17 +46,17 @@
     <main class="content">
         <section>
             <h1 class="center">Welcome to NYUS</h1>
-                <p class="para">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-                    quibusdam at provident? Modi enim nemo explicabo quos molestias
-                    voluptates voluptatibus, perferendis asperiores odio rem fugiat
-                    distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
-                    amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
-                    voluptates alias corporis, amet architecto accusamus laudantium, nulla
-                    pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
-                </p>
+            <div class="para1">
+            <p>Massa praesent sit suspendisse ac volutpat amet.
+                Commodo elit at non neque ullamcorper id.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque esse voluptates ipsa placeat illo ad voluptate iste saepe provident repudiandae. 
+                Similique harum ipsam quisquam sapiente magni unde velit, vero eveniet.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis fuga ut inventore excepturi nam atque consectetur dicta, 
+                molestias assumenda esse eveniet modi voluptatibus eum aliquam saepe praesentium, reiciendis et dolores!</p>
+          </div>
         </section>
     </main>
+    </section>
     <script src="js/app.js"></script>
 </body>
 </html>
