--- a/testimonial.html
+++ b/testimonial.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
-      body {
-          background-image: url('img/background2.jpg');
+       .hero {
+          background-image: url('img/background4.jpg');
           background-size: cover; 
           background-repeat: no-repeat; 
           background-position: center; 
-          height: 100vh; 
-          margin: 0; 
+          height: 55vh;  
       }
   </style>
     <title>Testimonial</title>
   </head>
   <body>
+    <section class="hero">
     <header>
       <div class="logo">
         <img src="img/logo.png" alt="LOGO" />
@@ -46,17 +46,13 @@
     <main class="content">
       <section>
         <h1 class="center">Testimonial</h1>
-        <p class="para">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
-          quibusdam at provident? Modi enim nemo explicabo quos molestias
-          voluptates voluptatibus, perferendis asperiores odio rem fugiat
-          distinctio, voluptatum expedita obcaecati vitae. Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Magnam consequuntur aut voluptas
-          voluptates alias corporis, amet architecto accusamus laudantium, nulla
-          pariatur unde illum, omnis repellat ex minus fugit veniam quibusdam.
-      </p>
+        <div class="para">
+          <p>Massa praesent sit suspendisse ac volutpat amet. <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;Commodo elit at non neque ullamcorper id.</p>
+    </div>
       </section>
     </main>
+  </section>
     <script src="js/app.js"></script>
   </body>
 </html>
