--- a/testimonial.html
+++ b/testimonial.html
@@ -28,10 +28,10 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" >About Us</a></li>
           <li class="dropdown">
-            <a href="#">Menu &#9662;</a>
+            <a href="menu.html">Menu &#9662;</a>
             <ul class="dropdown-content">
-              <li><a href="#">Light</a></li>
-              <li><a href="#">Dark</a></li>
+              <li><a href="menu.html">Light</a></li>
+              <li><a href="menu.html">Dark</a></li>
             </ul>
           </li>
           <li><a href="testimonial.html" class="active">Testimonial</a></li>
