--- a/About.html
+++ b/About.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/About.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <style>
       .hero {
           background-image: url('img/background2.jpg');
@@ -13,81 +14,66 @@
           background-position: center; 
           height: 55vh;  
       }
-  </style>
+    </style>
     <title>About Us</title>
-  </head>
-  <body>
+</head>
+<body>
     <section class="hero">
-    <header>
-      <div class="logo">
-        <img src="img/logo.png" alt="LOGO" />
-        <b>NYUS</b>
-      </div>
-      <nav>
-        <button class="toggle-btn" id="toggle-btn">&#9776;</button>
-        <ul id="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About Us</a></li>
-          <li class="dropdown">
-            <a href="#">Menu &#9662;</a>
-            <ul class="dropdown-content">
-              <li><a href="#">Light</a></li>
-              <li><a href="#">Dark</a></li>
-            </ul>
-          </li>
-          <li><a href="testimonial.html">Testimonial</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li></li>
-          <button class="btn1">
-            <a href="reservation.html"><b>Reservation</b></a>
-          </button>
-        </ul>
-      </nav>
-    </header>
-    <main class="content">
-      <section>
-        <h1 class="center">About Us</h1>
-        <div class="para">
-          <p>Massa praesent sit suspendisse ac volutpat amet. <br>
-          &nbsp;&nbsp;&nbsp;&nbsp;Commodo elit at non neque ullamcorper id.</p>
-    </div>
-      </section>
-    </main>
-  </section>
-  <section>
-    <div id="aa">
-      <h2>Our History</h2>
-      <p>Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut euismod. 
-        Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla facilisi. Dignissim volutpat 
-        velit ut dignissim aliquet nisl, pretium, viverra bibendum.<br><br>
-        Consequat facilisi ultricies integer eu nibh pellentesque. 
-        Morbi ac sit ultrices quis dignissim lectus. Pellentesque nisl, ac,
-        bibendum arcu vestibulum aliquam.</p>
-    </div>
-    <div id="ab">
-      <div class="item">
-        <img src="img/icon1.png" alt="Icon1">
-        <div class="text">
-          <h4>Hand-crafted Decor</h4>
-          <p>In total 650m² mix of styles and colors.</p>
+        <header>
+            <div class="logo">
+                <img src="img/logo.png" alt="LOGO" />
+                <b>NYUS</b>
+            </div>
+            <nav>
+                <button class="toggle-btn" id="toggle-btn">&#9776;</button>
+                <ul id="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li class="dropdown">
+                        <a href="menu.html">Menu &#9662;</a>
+                        <ul class="dropdown-content">
+                            <li><a href="menu.html">Light</a></li>
+                            <li><a href="menu.html">Dark</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><input type="text" placeholder="Search Menu" class="search-input">
+                        <i class="fas fa-search search-icon"></i></li>
+                    <li></li>
+                    <button class="btn1"><a href="reservation.html"><b>Reservation</b></a></button>
+                </ul>
+            </nav>
+        </header>
+        <main class="content">
+            <section>
+                <h1 class="center">About Us</h1>
+                <div class="para">
+                    <p>Massa praesent sit suspendisse ac volutpat amet. <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;Commodo elit at non neque ullamcorper id.</p>
+                </div>
+            </section>
+        </main>
+    </section>
+    <section>
+        <div id="aa">
+            <h2>Our History</h2>
+            <p>Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut euismod. 
+            Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla facilisi. Dignissim volutpat 
+            velit ut dignissim aliquet nisl, pretium, viverra bibendum.<br><br>
+            Consequat facilisi ultricies integer eu nibh pellentesque. 
+            Morbi ac sit ultrices quis dignissim lectus. Pellentesque nisl, ac,
+            bibendum arcu vestibulum aliquam.</p>
+        </div>    
+        <div id="ab">
+            <div id="item">
+                <img src="img/icon1.png" alt="Icon1">
+                <div class="text">
+                    <h4>Hand-crafted Decor</h4>
+                    <p>In total 650m² mix of styles and colors.</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="item">
-        <img src="img/icon1.png" alt="Icon1">
-        <div class="text">
-          <h4>Hand-crafted Decor</h4>
-          <p>In total 650m² mix of styles and colors.</p>
-        </div>
-      </div>
-      <div class="item">
-        <img src="img/icon1.png" alt="Icon1">
-        <div class="text">
-          <h4>Hand-crafted Decor</h4>
-          <p>In total 650m² mix of styles and colors.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+    </section>    
     <script src="js/app.js"></script>
-  </body>
+</body>
 </html>
