--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <style>
       .hero {
@@ -28,14 +29,15 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li class="dropdown">
-            <a href="#">Menu &#9662;</a>
+            <a href="menu.html">Menu &#9662;</a>
             <ul class="dropdown-content">
-              <li><a href="#">Light</a></li>
-              <li><a href="#">Dark</a></li>
+              <li><a href="menu.html">Light</a></li>
+              <li><a href="menu.html">Dark</a></li>
             </ul>
           </li>
-          <li><a href="testimonial.html">Testimonial</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
+          <li><input type="text" placeholder="Search Menu" class="search-input">
+            <i class="fas fa-search search-icon"></i></li>
           <li></li>
           <button class="btn1">
             <a href="reservation.html"><b>Reservation</b></a>
