--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <style>
         .hero {
@@ -30,14 +31,15 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li class="dropdown">
-                    <a href="#" class="nav-link">Menu &#9662;</a>
+                    <a href="menu.html" class="nav-link">Menu &#9662;</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Light</a></li>
-                        <li><a href="#" >Dark</a></li>
+                        <li><a href="menu.html">Light</a></li>
+                        <li><a href="menu.html" >Dark</a></li>
                     </ul>
                 </li>
-                <li><a href="testimonial.html">Testimonial</a></li>
                 <li><a href="contact.html" >Contact</a></li>
+                <li><input type="text" placeholder="Search Menu" class="search-input">
+                    <i class="fas fa-search search-icon"></i></li>
                 <li></li>
                 <button class="btn1"><a href="#"><b>Reservation</b></a></button>
             </ul>
