Menu section Updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <style>
         .hero {
             background-image: url('img/background1.jpg');
@@ -47,18 +48,34 @@
     </header>
     <main class="content">
         <section>
-            <h1 class="center">Welcome to NYUS</h1>
-            <div class="para1">
-            <p>Massa praesent sit suspendisse ac volutpat amet.
-                Commodo elit at non neque ullamcorper id.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque esse voluptates ipsa placeat illo ad voluptate iste saepe provident repudiandae. 
-                Similique harum ipsam quisquam sapiente magni unde velit, vero eveniet.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis fuga ut inventore excepturi nam atque consectetur dicta, 
-                molestias assumenda esse eveniet modi voluptatibus eum aliquam saepe praesentium, reiciendis et dolores!</p>
-          </div>
+            <div class="con">
+                <div class="con1">
+                <b>A GREAT PLACE. GREAT FOOD.</b>
+            </div>
+            <div class="con2">
+                <h1>A Great Place To Chill In <br>The City Of Ella, Sri Lanka</h1>
+            </div>
+            <div class="con3">
+                <p>Experience the thrill of hiking and reward yourself with a delightful dining <br>
+                    experience at Ella. Indulge in delicious cuisine and refreshing cocktails, making <br>
+                    unforgettable memories that will last a lifetime.</p>
+                </div>
+            </div>
         </section>
     </main>
     </section>
+        <section class="sec1">
+            <div class="dis1">
+                <h1>Discover The Good <br> Atmosphere Of NYUS.</h1>
+                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. <br>
+                    Bibendum tincidunt a scelerisque consectetur ultrices elementum <br>
+                    pulvinar non. Leo ut id vel nec nisi odio nisi. Auctor egestas nibh <br>
+                    augue enim, ornare blandit. Purus augue sagittis, risus phasellus <br>
+                    egestas ipsum.</p>
+                <img src="img/food1.jpg" alt="res">
+            </div>
+        </section>
+        </section>
     <script src="js/app.js"></script>
 </body>
 </html>
