--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
     </style>
     <title>Menu</title>
   </head>
-  <body>
+  <body class="container">
     <section class="hero">
       <header>
         <div class="logo">
@@ -86,6 +86,9 @@
         <div class="card-container">
           <div class="card">
             <img src="img/food1.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -96,13 +99,16 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
           </div>
           <div class="card">
             <img src="img/food2.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -113,13 +119,16 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
           </div>
           <div class="card">
             <img src="img/food3.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -130,13 +139,16 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
           </div>
           <div class="card">
             <img src="img/food2.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -147,13 +159,16 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
           </div>
           <div class="card">
             <img src="img/food1.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -164,13 +179,16 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
           </div>
           <div class="card">
             <img src="img/food3.jpg" alt="Card Image" class="card-img">
+            <div class="cart-icon">
+              <i class="fas fa-shopping-cart"></i>
+          </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
@@ -181,7 +199,7 @@
                   <span class="plus">+</span>
                 </div>
                 <div class="card-button">
-                  <button class="add-button">Add</button>
+                  <button class="add-button">$15.85</button>
                 </div>
               </div>
             </div>
