Search section Updated

--- a/index.html
+++ b/index.html
@@ -35,16 +35,20 @@
                     <a href="menu.html" class="nav-link">Menu &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a href="menu.html">Light</a></li>
-                        <li><a href="menu.html" >Dark</a></li>
+                        <li><a href="menu.html">Dark</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html" >Contact</a></li>
-                <li><input type="text" placeholder="Search Menu" class="search-input">
-                    <i class="fas fa-search search-icon"></i></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Menu" class="search-input">
+                        <i class="fas fa-search search-icon"></i>
+                    </div>
+                </li>
                 <li></li>
                 <button class="btn1"><a href="#"><b>Reservation</b></a></button>
             </ul>
-        </nav>
+        </nav>        
     </header>
     <main class="content">
         <section>
