jS FILE Updated

--- a/menu.html
+++ b/menu.html
@@ -87,16 +87,16 @@
           <div class="card">
             <img src="img/food1.jpg" alt="Card Image" class="card-img">
             <div class="cart-icon">
-              <i class="fas fa-shopping-cart"></i>
+             <a href="Cart.html"> <i class="fas fa-shopping-cart"></i></a>
           </div>
             <div class="card-content">
               <h2 class="card-title">Subway classic sub platter</h2>
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
@@ -114,9 +114,9 @@
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
@@ -134,9 +134,9 @@
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
@@ -154,9 +154,9 @@
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
@@ -174,9 +174,9 @@
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
@@ -194,9 +194,9 @@
               <p class="card-text"><a href="">See details</a></p>
               <div class="btn-icon">
                 <div class="number">
-                  <span class="minus">-</span>
-                  <input type="text" value="1">
-                  <span class="plus">+</span>
+                  <span id="decrement">-</span>
+                  <input type="text" value="0" id="counter" readonly>
+                  <span id="increment">+</span>
                 </div>
                 <div class="card-button">
                   <button class="add-button">$15.85</button>
