--- a/index.html
+++ b/index.html
@@ -70,16 +70,160 @@
     </section>
         <section class="sec1">
             <div class="dis1">
-                <h1>Discover The Good <br> Atmosphere Of NYUS.</h1>
-                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. <br>
-                    Bibendum tincidunt a scelerisque consectetur ultrices elementum <br>
-                    pulvinar non. Leo ut id vel nec nisi odio nisi. Auctor egestas nibh <br>
-                    augue enim, ornare blandit. Purus augue sagittis, risus phasellus <br>
+                <h1>Discover The Good Atmosphere Of NYUS.</h1>
+                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. 
+                    Bibendum tincidunt a scelerisque consectetur ultrices elementum 
+                    pulvinar non. Leo ut id vel nec nisi odio nisi. Auctor egestas nibh 
+                    augue enim, ornare blandit. Purus augue sagittis, risus phasellus 
                     egestas ipsum.</p>
-                <img src="img/food1.jpg" alt="res">
+                <img src="img/res1.jpg" alt="res">
+                <p style="color: black;"><b>Good Vibes</b></p>
+                <p>In total 650m² of hand-crafted decor, mix of styles and colors.</p>
+            </div>
+                <div class="dis2">
+                    <img src="img/res2.jpg" alt="res">
+                <p style="color: black;"><b>Cozy Place</b></p>
+                <p>To make everyone entering the establishment feel at home
+                     and find their atmosphere.</p>
+            </div>
+            <div class="dis3">
+                <img src="img/res3.jpg" alt="res">
+                <p style="color: black;"><b>Relax Atmosphere</b></p>
+                <p>Take refuge in our exclusive haven of greenery and away from the crowds. 
+                    Live music and performances every Friday night!</p>
+            </div>
+        </section>  
+        <div class="img-plate">
+            <img src="img/plate.png" alt="plate">
+        </div>
+        <section class="sec2">
+            <div class="sec2-div1">
+                <div class="our-menu">
+                    <p><b>OUR MENU</b></p>
+                    <h1>Get Relax Eat</h1>
+                </div>
+                <div class="menu-para">
+                    <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit.
+                        Bibendum tincidunt a scelerisque consectetur ultrices elementum pulvinar non.</p>
+                </div>
+            </div>
+            <div class="sec2-grid">
+                <div class="sec2-div2">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+                <div class="sec2-div2">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+                <div class="sec2-div2">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+                <div class="sec2-div3">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+                <div class="sec2-div3">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+                <div class="sec2-div3">
+                    <span>LEMON AND GARLIC GREEN BEANS - 15.00</span>
+                    <p>Lemon / Garlic / Beans</p>
+                    <p class="dashes">---------------------------------------------------------------------------------</p>
+                </div>
+            </div>
+            <div class="btn-menu">
+                <button>View all menu</button>
             </div>
         </section>
+        <section class="sec3">
+            <img src="img/menu.jpg" alt="menu" class="sec3-img">
+            <div class="sec3-div1">
+                <h5>HOMEMADE</h5>
+                <h1>Signature Menu</h1>
+                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. <br>
+                    Bibendum tincidunt a scelerisque consectetur ultrices <br>
+                    elementum pulvinar non.</p>
+            </div>
+        </section>  
+        <section class="image-grid">
+            <div class="image-card">
+                <img src="img/res4.jpg" alt="Image 1">
+            </div>
+            <div class="image-card">
+                <img src="img/res5.jpg" alt="Image 2">
+            </div>
+            <div class="image-card">
+                <img src="img/res6.jpg" alt="Image 3">
+            </div>
+            <div class="image-card">
+                <img src="img/res7.jpg" alt="Image 4">
+            </div>
+            <div class="image-card">
+                <img src="img/res8.jpg" alt="Image 5">
+            </div>
+            <div class="image-card">
+                <img src="img/res9.jpg" alt="Image 6">
+            </div>
+        </section> 
+        <section class="photo-section">
+            <div class="left-column">
+                <h1>Meet The Team Of NYUS</h1>
+                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices elementum pulvinar non. Leo ut id vel nec nisi odio nisi. Auctor egestas nibh augue enim, ornare blandit.
+                </p>
+                <img src="img/team1.jpg" alt="Photo 1" class="main-photo">
+            </div>
+            <div class="right-column">
+                <img src="img/team2.jpg" alt="Photo 2" class="side-photo">
+                <img src="img/team3.jpg" alt="Photo 3" class="side-photo">
+            </div>
         </section>
+        <section class="new-section">
+            <div class="image-container">
+                <img src="img/res10.jpg" alt="New Image" class="new-image">
+                <div class="test-text">
+                    <h6>Testimonial</h6>
+                    <h1>What they say</h1>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="img/man1.png" alt="ava" class="avatar">
+                        <p>If you are looking for a good pizza, thin and crispy with tasty ingredients, you should come here! Arrack 
+                            sour is fire as well! Amal was of great help. We‘ll come back</p>
+                        <h5>FRANZISKA MÜLLER-DEGENHARDT</h5>
+                    </div>
+                    <div class="card">
+                        <img src="img/man1.png" alt="ava" class="avatar">
+                        <p>If you are looking for a good pizza, thin and crispy with tasty ingredients, you should come here! Arrack 
+                            sour is fire as well! Amal was of great help. We‘ll come back</p>
+                        <h5>FRANZISKA MÜLLER-DEGENHARDT</h5>
+                    </div>
+                    <div class="card">
+                        <img src="img/man1.png" alt="ava" class="avatar">
+                        <p>If you are looking for a good pizza, thin and crispy with tasty ingredients, you should come here! Arrack 
+                            sour is fire as well! Amal was of great help. We‘ll come back</p>
+                        <h5>FRANZISKA MÜLLER-DEGENHARDT</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="reservation">
+                <h1>Reservation</h1>
+                <p>Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. 
+                    Bibendum tincidunt a scelerisque consectetur ultrices elementum pulvinar non.</p>
+                <button>Book a table now</button>    
+                <h6>TELEPHONE RESERVATIONS</h6>
+                <h3>+94 77 592 9597</h3>
+            </div>
+        </section>
+        
+             
     <script src="js/app.js"></script>
 </body>
 </html>
