--- a/About.html
+++ b/About.html
@@ -5,13 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Us - Hiking Bar & Restaurant</title>
-    <style>
-        /* .team-img {
-            width: 100%;
-            max-width: 400px;
-            height: auto;
-        } */
-    </style>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -30,7 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap">
 
     <!-- Favicon -->
-    <link rel="icon" href="./images/NYUS.png" type="image/x-icon" />
+    <link rel="icon" href="./img/logo.png" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
