--- a/About.html
+++ b/About.html
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 nunito-custom mb-sm-3 mx-sm-3 mx-lg-0">
-                    <h1>Meet The Team Of NYUS.</h1>
+                    <h1 class="fw-bold">Meet The Team Of NYUS.</h1>
                 </div>
                 <div class="col-lg-6 col-12">
                     <p class="fw-medium  text-start fs-6 fs-sm-6 nunito-custom mx-sm-3 mx-lg-0" style="color: #979898;">
