--- a/about.html
+++ b/about.html
@@ -83,13 +83,13 @@
                         <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
                         <a href="/aboutus.html" class="nav-item nav-link active mx-3">About US</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle mx-3" id="menuDropdown" role="button"
+                            <a href="/menu.html" class="nav-link dropdown-toggle mx-3" id="menuDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                <li><a class="dropdown-item" href="#">Light Theme</a></li>
-                                <li><a class="dropdown-item" href="#">Dark Theme</a></li>
+                                <li><a class="dropdown-item" href="/menu.html">Light Theme</a></li>
+                                <li><a class="dropdown-item" href="/menu.html">Dark Theme</a></li>
                             </ul>
                         </div>
                         <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
