--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap">
 
     <!-- Favicon -->
-    <link rel="icon" href="./img/logo.png" type="image/x-icon" />
+    <link rel="icon" href="./img//logo.png" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,13 +83,14 @@
                         <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
                         <a href="/aboutus.html" class="nav-item nav-link active mx-3">About US</a>
                         <div class="nav-item dropdown">
-                            <a href="/menu.html" class="nav-link dropdown-toggle mx-3" id="menuDropdown" role="button"
+                            <a href="/menu.html" class="nav-link mx-3" id="menuDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
+                                <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i>
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                <li><a class="dropdown-item" href="/menu.html">Light Theme</a></li>
-                                <li><a class="dropdown-item" href="/menu.html">Dark Theme</a></li>
+                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown" style="border-top: 3px solid gold;">
+                                <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light Theme</a></li>
+                                <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark" data-theme="dark">Dark Theme</a></li>
                             </ul>
                         </div>
                         <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
