--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,10 @@
         a:hover {
             color: yellow;
         }
+
+        .small-icon {
+            font-size: 12px;
+        }
     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,6 +47,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
+        
 </head>
 
 <body>
@@ -69,13 +74,13 @@
                         <a href="/index.html" class="nav-item nav-link mx-3">Home</a>
                         <a href="/about.html" class="nav-item nav-link mx-3">About US</a>
                         <div class="nav-item dropdown">
-                            <a href="/menu.html" class="nav-link active dropdown-toggle mx-3" id="menuDropdown"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a href="/menu.html" class="nav-link active  mx-3" id="menuDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Menu
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-                                <li><a class="dropdown-item" href="#" data-theme="light">Light Theme</a></li>
-                                <li><a class="dropdown-item" href="#" data-theme="dark">Dark Theme</a></li>
+                                <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i> </a>
+                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown" style="border-top: 3px solid rgba(255, 217, 0, 0.852);">
+                                <li><a class="dropdown-item menu-theme" href="#" data-theme="light">Light Theme</a></li>
+                                <li><a class="dropdown-item menu-theme" href="#" data-theme="dark">Dark Theme</a></li>
                             </ul>
                         </div>
                         <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
@@ -127,14 +132,14 @@
                         <img src="/img/nyus-cheesy-fruits-cake.png" width="110px" alt="">
                     </div>
                     <div>
-                        <h6 class="mx-lg-3 nunito-custom text-start text-nowrap fw-bold text-uppercase"
+                        <h6 class="signature-text mx-lg-3 nunito-custom text-start text-nowrap fw-bold text-uppercase"
                             style="letter-spacing: 2px;">
                             Signature
                         </h6>
                         <h4 class="mx-lg-3 nunito-custom mb-lg-0 text-start text-nowrap" style="font-size: 24px;">
                             Strawberry And Grapes Cake
                         </h4>
-                        <p class="mx-lg-3 text-start my-2 text-muted" style="font-size: 17px;">
+                        <p class="mx-lg-3 text-start my-2" style="font-size: 17px;">
                             In lorem ornare sollicitudin aliquet nunc cum massa.
                         </p>
                         <p class="mx-lg-3 fw-bold text-start my-2" style="font-size: 16px; font-family: cursive;">
@@ -237,14 +242,14 @@
                         <img src="/img/nyus-toasted-bread-with-grape.png" width="110px" alt="">
                     </div>
                     <div>
-                        <h6 class="mx-lg-3  nunito-custom text-start text-nowrap fw-bold text-uppercase"
+                        <h6 class="signature-text mx-lg-3  nunito-custom text-start text-nowrap fw-bold text-uppercase"
                             style="letter-spacing: 2px;">
                             Signature
                         </h6>
                         <h4 class="mx-lg-3 nunito-custom mb-lg-0 text-start  text-nowrap" style="font-size: 24px;">
                             NYUS Toasted Bread with Grape
                         </h4>
-                        <p class="mx-lg-3 text-start text-muted my-2" style="font-size: 17px;">
+                        <p class="mx-lg-3 text-start my-2" style="font-size: 17px;">
                             In lorem ornare sollicitudin aliquet nunc cum massa.
                         </p>
                         <p class="mx-lg-3 fw-bold text-start my-2"
@@ -346,14 +351,14 @@
                         <img src="/img/nyus-cheesy-fruits-cake.png" width="110px" alt="">
                     </div>
                     <div>
-                        <h6 class="mx-lg-3  nunito-custom text-start text-nowrap fw-bold text-uppercase"
+                        <h6 class="signature-text mx-lg-3  nunito-custom text-start text-nowrap fw-bold text-uppercase"
                             style="letter-spacing: 2px;">
                             Signature
                         </h6>
                         <h4 class="mx-lg-3 nunito-custom mb-lg-0 text-start  text-nowrap" style="font-size: 24px;">
                             Cheesy Fruits Cake
                         </h4>
-                        <p class="mx-lg-3 text-start text-muted my-2" style="font-size: 17px;">
+                        <p class="mx-lg-3 text-start my-2" style="font-size: 17px;">
                             In lorem ornare sollicitudin aliquet nunc cum massa.
                         </p>
                         <p class="mx-lg-3 fw-bold text-start my-2" style="font-size: 15px; font-family:cursive;">
@@ -617,24 +622,22 @@
 
     <!-- Dark Theme Script -->
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const themeLinks = document.querySelectorAll('.dropdown-item[data-theme]');
+        document.addEventListener('DOMContentLoaded', function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const theme = urlParams.get('theme');
 
+            if (theme === 'dark') {
+                document.body.classList.add('dark-theme'); // Add your dark theme class here
+            }
+
+            const themeLinks = document.querySelectorAll('.menu-theme');
             themeLinks.forEach(link => {
-                link.addEventListener('click', function (event) {
+                link.addEventListener('click', function(event) {
                     event.preventDefault();
-                    const selectedTheme = this.getAttribute('data-theme');
-                    switchTheme(selectedTheme);
+                    const selectedTheme = link.getAttribute('data-theme');
+                    window.location.href = `/menu.html?theme=${selectedTheme}`;
                 });
             });
-
-            function switchTheme(theme) {
-                if (theme === 'dark') {
-                    document.body.classList.add('dark-theme');
-                } else {
-                    document.body.classList.remove('dark-theme');
-                }
-            }
         });
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
