bug fix our specialties component in small size  into the about page

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="./aboutus.css">
+    <link rel="stylesheet" href="./css/About.css">
 
     <!-- Google Font -->
     <link rel="stylesheet"
@@ -88,16 +88,19 @@
                                 Menu
                                 <i class="fa fa-chevron-down ms-2 bg- small-icon" aria-hidden="true"></i>
                             </a>
-                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown" style="border-top: 3px solid gold;">
-                                <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light Theme</a></li>
-                                <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark" data-theme="dark">Dark Theme</a></li>
+                            <ul class="dropdown-menu rounded-0" aria-labelledby="menuDropdown"
+                                style="border-top: 3px solid gold;">
+                                <li><a class="dropdown-item menu-theme" href="/menu.html" data-theme="light">Light
+                                        Theme</a></li>
+                                <li><a class="dropdown-item menu-theme" href="/menu.html?theme=dark"
+                                        data-theme="dark">Dark Theme</a></li>
                             </ul>
                         </div>
                         <a href="testimonial.html" class="nav-item nav-link mx-3">Testimonial</a>
                         <a href="contact.html" class="nav-item nav-link mx-3">Contact</a>
                     </div>
                     <a href="/reservation.html" class="btn btn-outline-light px-3 text-uppercase rounded-0 custom-font"
-                        style="padding: 10px;">Reservation</a>
+                        style="padding: 10px;font-size: 12px;">Reservation</a>
                 </div>
             </nav>
             <!-- nav body start -->
@@ -146,7 +149,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-12 mt-sm-1 ">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-8 ">
                                 <!-- First Component -->
                                 <div class="d-flex align-items-start mb-1">
                                     <div class="position-relative me-4">
@@ -203,9 +206,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8 col-sm-12 order-lg-2 order-sm-3 p-0 mt-sm-3">
-                        <img src="./img/inside-restaurant-topview.jpg" class="img-fluid position-absolute"
-                            alt="Restaurant Top View">
+                    <div class="col-lg-8 mt-sm-5">
+                        <img src="./img/inside-restaurant-topview.jpg" class="img-fluid position-absolute" alt="">
                     </div>
                 </div>
             </div>
@@ -214,60 +216,49 @@
     </section>
     <!-- Our Story End -->
 
-
     <!-- our specialties start -->
-    <section class="container-fluid py-5 mt-0" style="background-color: #1a1a1a;min-height: 600px;">
+    <section class="container-fluid py-5 mt-sm-5" style=" background-color: #1a1a1a;">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-4 d-flex flex-column  justify-content-center align-items-start "
-                    style="position: relative;left: 55px;">
-                    <div class="mb-2">
-                        <h1 class="fw-semibold text-nowrap text-white "
-                            style="font-size: 50px;font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                            Our Specialties</h1>
-                    </div>
+            <div class="row" style="margin-top: 160px;">
+                <div class="col-lg-4 col-12 mb-5">
+                    <h1 class="position-relative text-nowrap text-white mt-5" style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                        Our Specialties
+                    </h1>
                     <div>
-                        <p class="fs-6 mb-4 text-start text-nowrap text-white">
-                            Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices
-                            quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
+                        <p class="position-relative text-start text-nowrap text-white fs-6">
+                            Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
                         </p>
-                        <a href="" class="btn btn-outline-light px-3 mt-2 text-uppercase rounded-0 custom-font"
-                            style="padding: 10px;">view all menu</a>
+                        <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font" style="padding: 10px; font-size: 12px;">
+                            View All Menu
+                        </a>
                     </div>
                 </div>
-                <div class="col-lg-8" style="margin-top: 170px;">
-                    <div class="row mb-4 me-5">
-                        <div class="col-6 d-flex flex-column align-items-center">
-                            <img src="./img/nyus-toasted-bread-with-grape.png" width="75%" class="img-fluid mb-2"
-                                alt="Toasted Bread with Grape" style="margin-right: -40px;">
-                            <p class="text-white text-center">
-                                <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
-                                <br />
-                                <label>Bread / Cream / Grape</label>
-                                <br />
-                                <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
-                            </p>
-                        </div>
-                        <div class="col-6 d-flex flex-column align-items-center ">
-                            <img src="./img/nyus-cheesy-fruits-cake.png" width="75%" class="img-fluid mb-2"
-                                alt="Cheesy Fruits Cake" style="margin-left: -40px;">
-                            <p class="text-white text-center">
-                                <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
-                                <br />
-                                <label>Cake / Fruits / Cheese</label>
-                                <br />
-                                <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
-
-                            </p>
-                        </div>
+                <div class="col-lg-8 d-flex flex-wrap">
+                    <div class="col-md-6 col-12 mb-4">
+                        <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2" alt="Toasted Bread with Grape">
+                        <p class="text-white text-center">
+                            <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
+                            <br />
+                            <label>Bread / Cream / Grape</label>
+                            <br />
+                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
+                        </p>
+                    </div>
+                    <div class="col-md-6 col-12 mb-4">
+                        <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid mb-2" alt="Cheesy Fruits Cake">
+                        <p class="text-white text-center">
+                            <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
+                            <br />
+                            <label>Cake / Fruits / Cheese</label>
+                            <br />
+                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
+                        </p>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </section>
+    
     <!-- our specialties end -->
 
     <!-- meet the team start -->
