--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <body>
     <header
-        style="background-image: url('/img/homepage-hero-bg-img.jpg');background-size: cover;background-position: center center;background-repeat: no-repeat; height:auto;">
+        style="background-image: url('./img/homepage-hero-bg-img.jpg');background-size: cover;background-position: center center;background-repeat: no-repeat; height:auto;">
         <div class="container-xxl position-relative p-0"
             style="background-image: url('/images/Untitled.jpeg');background-size: cover;background-position: center center;background-repeat: no-repeat;">
             <nav class="navbar navbar-expand-lg navbar-dark px-4 px-lg-5 py-3 py-lg-0">
