responsive about us in nav body

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
 
                 <!-- column 01 start-->
                 <div class="col-lg-6 col-md-6 col-12 mb-5">
-                    <h1 class="position-relative mt-5 nunito-custom"
+                    <h1 class="mt-5 nunito-custom"
                         style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                         Discover The Good Atmosphere Of NYUS.
                     </h1>
 
-                    <p class="position-relative text-start fs-6 mt-lg-4 text-muted">
+                    <p class="text-start fs-6 mt-lg-4 text-muted">
                         Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit.<br /> Bibendum tincidunt a
                         scelerisque consectetur ultrices elementum <br />pulvinar non. Leo ut id vel nec nisi odio nisi.
                         Auctor egestas nibh<br /> augue enim, ornare blandit. Purus augue sagittis, risus phasellus
@@ -192,7 +192,7 @@
                         style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                         Good Vibes
                     </h5>
-                    <p class="text-muted fs-6 mb-0 text-start text-nowrap">
+                    <p class="text-muted fs-6 mb-0 text-start">
                         In total 650m² of hand-crafted decor, mix of styles and colors.
                     </p>
 
@@ -207,7 +207,7 @@
                             style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                             Cozy Place
                         </h5>
-                        <p class="text-muted fs-6 mb-0 text-start text-nowrap">
+                        <p class="text-muted fs-6 mb-0 text-start">
                             To make everyone entering the establishment<br /> feel at home and find their atmosphere.
                         </p>
                     </div>
@@ -217,7 +217,7 @@
                             style="font-size: 18px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                             Relax Atmosphere
                         </h5>
-                        <p class="text-muted fs-6 mb-0 text-start text-nowrap">
+                        <p class="text-muted fs-6 mb-0 text-start">
                             Take refuge in our exclusive haven of greenery and away from <br />the crowds. Live music
                             and performances every Friday night! </p>
                     </div>
@@ -755,7 +755,7 @@
     <!-- testimonal End -->
 
     <!-- reservation  Start -->
-    <section style="height: 70vh;">
+    <section style="height: 80vh;">
         <div class="container my-lg-5 my-md-5 my-sm-5 py-lg-5 py-md-5 py-sm-5 text-center"
             style="top: 150px;position: relative;">
             <div class="row align-items-center g-5 ">
@@ -838,31 +838,14 @@
                     </div>
 
                     <!-- x-small -->
-                    <div style="position: relative;top: 100px;">
-                        <h1 class="display-3 text-dark fw-bolder nunito-custom d-block d-lg-none d-md-none d-sm-none"
-                            style="font-size: 35px;">
-                            Reservation
-                        </h1>
-                        <div>
-                            <p class=" mb-4 pb-2 mt-4 text-secondary d-block d-lg-none d-md-none d-sm-none"
-                                style="font-size: 12px;">Neque elit, rutrum in laoreet nec
-                                eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices
-                                elementum pulvinar non. </p>
-                            <a href="/reservation.html"
-                                class="btn btn-outline-dark px-3  fw-bold text-uppercase rounded-0 custom-font border-2 d-block d-lg-none d-md-none d-sm-none"
-                                style="padding: 9px; font-size: 10px;width: 45%;position: relative;left: 29%;top: -13px;">Book
-                                a table now</a>
-                            <p class=" custom-font text-black mt-lg-5 text-uppercase d-block d-lg-none d-md-none d-sm-none"
-                                style="position: relative;left: 2%;">
-                                Telephone Reservations</p>
-                            <h1 class="d-block d-lg-none d-md-none d-sm-none"
-                                style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-size: 30px;">
-                                +94 77 592 9597</h1>
-                        </div>
-
-                    </div>
-
-
+                <div class="d-block d-sm-none" style="position: relative; top: 110px;">
+                    <h1 class="display-3 text-dark fw-bolder nunito-custom" style="font-size: 35px;">Reservation</h1>
+                    <p class="mb-4 pb-2 mt-2 text-secondary" style="font-size: 12px;">Neque elit, rutrum in laoreet nec eget scelerisque volutpat sit. Bibendum tincidunt a scelerisque consectetur ultrices elementum pulvinar non.</p>
+                    <a href="/reservation.html" class="btn btn-outline-dark px-3 fw-bold text-uppercase rounded-0 custom-font border-2 p-2" style=" font-size: 10px; width: auto;">Book a table now</a>
+                    <p class="custom-font text-black text-uppercase my-3" style="font-size: x-small;">Telephone Reservations</p>
+                    <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 30px;">+94 77 592 9597</h1>
+                </div>
+                  
 
 
                 </div>
@@ -1018,7 +1001,6 @@
 
         <!-- ---------------- -->
 
-        <!-- toggle button js -->
         <script>
             document.addEventListener('DOMContentLoaded', function () {
                 const modalElement = document.getElementById('modalGallery');
