--- a/about.html
+++ b/about.html
@@ -126,22 +126,32 @@
         </div>
         </nav>
 
-        <!-- nav body start -->
-        <div class="container-xxl py-5 mb-5 d-flex justify-content-center">
-            <div class="container my-5 py-5 text-center">
-                <div class="row align-items-center g-5">
-                    <div class="col-lg-6 mx-auto">
-                        <h1 class="display-3 text-white fw-bold" style="font-size: 73px;">About US</h1>
-                        <p class="text-white animated sliderInLeft mb-4 pb-2 mt-4">Massa praesent sit suspendisse ac
-                            volutpat amet.<br /> Commodo elit at non neque ullamcorper id.</p>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-center" style="margin-top: 75px;">
-                    <div class="border-start border-1 border-warning" style="height: 86px;"></div>
-                </div>
+<!-- Nav Body Start -->
+<div class="container-xxl py-5 mb-5 d-flex justify-content-center">
+    <div class="container my-5 py-5 text-center">
+        <div class="row align-items-center g-5">
+            <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+                <h1 class="display-2 text-white fw-bold">About Us</h1>
+                <p class="text-white mb-4 pb-2 mt-4">
+                    Massa praesent sit suspendisse ac volutpat amet.<br />
+                    Commodo elit at non neque ullamcorper id.
+                </p>
             </div>
         </div>
-        <!-- nav body end -->
+        <div class="d-flex justify-content-center mt-4">
+            <div class="border-start border-1 border-warning" style="height: 60px;"></div>
+        </div>
+    </div>
+</div>
+<!-- Nav Body End -->
+
+
+
+
+
+
+
+
         </div>
     </header>
 
@@ -153,13 +163,13 @@
 
     <!-- Our Story Start -->
     <section class="container-fluid py-5">
-        <div class="container mt-lg-5">
+        <div class="container mt-lg-5 mt-2">
             <div class="row">
                 <div class="col-lg-4 col-sm-12 mb-sm-3 mx-sm-3 mx-lg-0">
                     <h1 class="fw-bold" style="font-size: 57px;">Our Story.</h1>
                 </div>
                 <div class="col-lg-6 col-sm-12">
-                    <p class="fw-medium text-start fs-6 fs-sm-6 nunito-custom mx-sm-3 mx-lg-0" style="color: #878484;">
+                    <p class="fw-medium text-start  fs-6 fs-sm-6 nunito-custom mx-sm-3 mx-lg-0" style="color: #878484;">
                         Mattis nisi, ultricies nunc pellentesque pulvinar malesuada habitant in. Sed sagittis lectus ut
                         euismod. Mauris, dui viverra a tincidunt tellus tempus amet. Posuere massa at ornare nulla
                         facilisi. Dignissim volutpat velit ut dignissim aliquet nisl, pretium, viverra
@@ -170,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="container mt-sm-5 position-relative">
+            <div class="container mt-sm-5  position-relative">
                 <div class="row">
                     <div class="col-lg-4 col-sm-12 mt-sm-1 ">
                         <div class="row">
@@ -241,54 +251,53 @@
     </section>
     <!-- Our Story End -->
 
-    <!-- our specialties start -->
-    <section class="container-fluid py-5 mt-sm-5" style=" background-color: #1a1a1a;">
-        <div class="container">
-            <div class="row" style="margin-top: 160px;">
-                <div class="col-lg-4 col-12 mb-5">
-                    <h1 class="position-relative text-nowrap text-white mt-5"
-                        style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                        Our Specialties
-                    </h1>
-                    <div>
-                        <p class="position-relative text-start text-nowrap text-white fs-6">
-                            Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices
-                            quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
-                        </p>
-                        <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
-                            style="padding: 10px; font-size: 12px;">
-                            View All Menu
-                        </a>
-                    </div>
+ <!-- our specialties start -->
+<section class="container-fluid py-5 mt-sm-5" style="background-color: #1a1a1a;">
+    <div class="container">
+        <div class="row" style="margin-top: 160px;">
+            <div class="col-lg-4 col-12 mb-5 text-center text-lg-start">
+                <h1 class="position-relative text-nowrap text-white mt-5"
+                    style="font-size: 50px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    Our Specialties
+                </h1>
+                <div>
+                    <p class="position-relative text-start text-nowrap text-white fs-6">
+                        Consequat facilisi ultricies integer eu nibh <br />pellentesque. Morbi ac sit ultrices
+                        quis<br /> dignissim lectus. Pellentesque nisl, ac,<br /> bibendum arcu vestibulum aliquam.
+                    </p>
+                    <a href="#" class="btn btn-outline-light px-4 mt-2 text-uppercase rounded-0 custom-font"
+                        style="padding: 10px; font-size: 12px;">
+                        View All Menu
+                    </a>
                 </div>
-                <div class="col-lg-8 d-flex flex-wrap">
-                    <div class="col-md-6 col-12 mb-4">
-                        <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2"
-                            alt="Toasted Bread with Grape">
-                        <p class="text-white text-center">
-                            <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
-                            <br />
-                            <label>Bread / Cream / Grape</label>
-                            <br />
-                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
-                        </p>
-                    </div>
-                    <div class="col-md-6 col-12 mb-4">
-                        <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid mb-2" alt="Cheesy Fruits Cake">
-                        <p class="text-white text-center">
-                            <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
-                            <br />
-                            <label>Cake / Fruits / Cheese</label>
-                            <br />
-                            <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
-                        </p>
-                    </div>
+            </div>
+            <div class="col-lg-8 d-flex flex-wrap justify-content-center">
+                <div class="col-md-6 col-12 mb-4">
+                    <img src="./img/nyus-toasted-bread-with-grape.png" class="img-fluid mb-2" alt="Toasted Bread with Grape">
+                    <p class="text-white text-center">
+                        <label class="nunito-custom">NYUS TOASTED BREAD WITH GRAPE</label>
+                        <br />
+                        <label>Bread / Cream / Grape</label>
+                        <br />
+                        <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">8.50</strong>
+                    </p>
+                </div>
+                <div class="col-md-6 col-12 mb-4">
+                    <img src="./img/nyus-cheesy-fruits-cake.png" class="img-fluid mb-2" alt="Cheesy Fruits Cake">
+                    <p class="text-white text-center">
+                        <label class="nunito-custom">NYUS CHEESY FRUITS CAKE</label>
+                        <br />
+                        <label>Cake / Fruits / Cheese</label>
+                        <br />
+                        <strong style="font-family: Georgia, 'Times New Roman', Times, serif;">10.00</strong>
+                    </p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+<!-- our specialties end -->
 
-    <!-- our specialties end -->
 
     <!-- meet the team start -->
     <section class="container-fluid py-5 mt-5">
